--- a/index.html
+++ b/index.html
@@ -7,48 +7,50 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <header>
-      <div class="logo">Kp Golv & Ytskikt</div>
-      <nav>
-        <div class="menu-toggle" id="menu-toggle">&#9776;</div>
-        <ul id="nav-links">
-          <li><a href="#">Hem</a></li>
-          <li><a href="#">Tjänster</a></li>
-          <li><a href="#">Om oss</a></li>
-          <li><a href="#">Kontakt</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div class="wrapper">
+      <header>
+        <div class="logo">Kp Golv & Ytskikt</div>
+        <nav>
+          <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+          <ul id="nav-links">
+            <li><a href="#">Hem</a></li>
+            <li><a href="#">Tjänster</a></li>
+            <li><a href="#">Om oss</a></li>
+            <li><a href="#">Kontakt</a></li>
+          </ul>
+        </nav>
+      </header>
 
-    <section class="hero">
-      <h1>Experter på golv och ytskikt</h1>
-      <p>
-        Vi levererar högkvalitativa ytskiktslösningar – med noggrannhet och
-        passion.
-      </p>
-      <a href="#kontakt" class="cta">Kontakta oss</a>
-    </section>
+      <section class="hero">
+        <h1>Experter på golv och ytskikt</h1>
+        <p>
+          Vi levererar högkvalitativa ytskiktslösningar – med noggrannhet och
+          passion.
+        </p>
+        <a href="#kontakt" class="cta">Kontakta oss</a>
+      </section>
 
-    <section class="tjanster">
-      <h2>Våra tjänster</h2>
-      <div class="service-boxes">
-        <div class="service">
-          <h3>Golvavjämning</h3>
-          <p>
-            Perfekta underlag för alla typer av golv – snabbt och noggrant
-            utfört.
-          </p>
+      <section class="tjanster">
+        <h2>Våra tjänster</h2>
+        <div class="service-boxes">
+          <div class="service">
+            <h3>Golvavjämning</h3>
+            <p>
+              Perfekta underlag för alla typer av golv – snabbt och noggrant
+              utfört.
+            </p>
+          </div>
+          <div class="service">
+            <h3>Måleri</h3>
+            <p>Inomhus och utomhusmålning med öga för detaljer och kvalitet.</p>
+          </div>
+          <div class="service">
+            <h3>Kakel & Klinker</h3>
+            <p>Professionell plattsättning i badrum, kök och andra utrymmen.</p>
+          </div>
         </div>
-        <div class="service">
-          <h3>Måleri</h3>
-          <p>Inomhus och utomhusmålning med öga för detaljer och kvalitet.</p>
-        </div>
-        <div class="service">
-          <h3>Kakel & Klinker</h3>
-          <p>Professionell plattsättning i badrum, kök och andra utrymmen.</p>
-        </div>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <footer>
       <p>&copy; 2025 Kp Golv & Ytskikt | Västerås | 073-822 40 40</p>
